--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,37 +1,36 @@
+worker_processes 1;
+
 events {
-    # Event-related directives
+    worker_connections 1024;
 }
 
 http {
+    # Include additional configuration files
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+
+    # Your server block goes here
     server {
         listen 80;
-        server_name localhost;  # Adjust if you have a specific domain
+        server_name localhost;
 
         location / {
-            proxy_pass http://wordpress:9000;  # Match your WordPress container's port
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            root /usr/share/nginx/html;
+            index index.html;
         }
     }
 
-    # HTTPS server block (optional if you're using SSL)
+    # SSL server block (if applicable)
     server {
         listen 443 ssl;
-        server_name localhost;  # Adjust if you have a specific domain
+        server_name localhost;
 
         ssl_certificate /etc/nginx/certs/fullchain.pem;
         ssl_certificate_key /etc/nginx/certs/privkey.pem;
 
         location / {
-            proxy_pass http://wordpress:9000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            root /usr/share/nginx/html;
+            index index.html;
         }
     }
 }
-
-
