--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -4,10 +4,10 @@ services:
       context: ./requirements/mariadb
     container_name: mariadb
     environment:
-      MYSQL_ROOT_PASSWORD: root_password
+      MYSQL_ROOT_PASSWORD: "coffe"
       MYSQL_DATABASE: wordpress
-      MYSQL_USER: wordpress_user
-      MYSQL_PASSWORD: wordpress_password
+      MYSQL_USER: andre-da
+      MYSQL_PASSWORD: "coffe"
     volumes:
       - mariadb_data:/var/lib/mysql
       - ./requirements/mariadb/conf.d:/etc/mysql/conf.d
@@ -21,9 +21,9 @@ services:
       context: ./requirements/wordpress
     container_name: wordpress
     environment:
-      WORDPRESS_DB_HOST: mariadb:3306
-      WORDPRESS_DB_USER: wordpress_user
-      WORDPRESS_DB_PASSWORD: wordpress_password
+      WORDPRESS_DB_HOST: mariadb
+      WORDPRESS_DB_USER: andre-da
+      WORDPRESS_DB_PASSWORD: "coffe"
       WORDPRESS_DB_NAME: wordpress
     volumes:
       - wordpress_data:/var/www/html
