--- a/srcs/.env
+++ b/srcs/.env
@@ -1,12 +1,19 @@
-DOMAIN_NAME=andre.42.fr
+DOMAIN_NAME=andre-da.42.fr
+CERT_=/etc/ssl/certs/nginx-selfsigned.crt
 
 # MariaDB Setup
-MYSQL_ROOT_PASSWORD=your_root_password
-MYSQL_DATABASE=wordpress
-MYSQL_USER=wordpress_user
-MYSQL_PASSWORD=your_database_password
+db1_name=lol1
+db1_user=ss
+sb1_pwd=tt
 
 # WordPress Admin
-WP_ADMIN_USER=admin42
-WP_ADMIN_PASSWORD=securepassword
+WP_TITLE=myFirstSite
+WP_ADMIN_USR=42master
+WP_ADMIN_PWD=1234
 WP_ADMIN_EMAIL=admin@andre.42.fr
+WP_USR=andre-da
+WP_EMAIL=fxandrealb@gmail.com
+WP_PWD=1234
+db_name=lol1
+db_user=ss
+db_pwd=tt
