--- a/srcs/.env
+++ b/srcs/.env
@@ -1,10 +1,10 @@
 DOMAIN_NAME=andre-da.42.fr
-CERT_=/etc/ssl/certs/nginx-selfsigned.crt
 
 # MariaDB Setup
-db1_name=lol1
-db1_user=ss
-sb1_pwd=tt
+SQL_DB=mydata
+SQL_USER=andre
+SQL_PASS=1234
+SQL_ROOT_PASS=1234
 
 # WordPress Admin
 WP_TITLE=myFirstSite
@@ -14,6 +14,3 @@ WP_ADMIN_EMAIL=admin@andre.42.fr
 WP_USR=andre-da
 WP_EMAIL=fxandrealb@gmail.com
 WP_PWD=1234
-db_name=lol1
-db_user=ss
-db_pwd=tt
