--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -2,13 +2,18 @@ FROM debian:buster
 
 RUN apt-get update -y && \
     apt-get install -y mariadb-server
+    
+RUN mkdir -p /var/run/mysqld
+RUN chown -R mysql:mysql /var/run/mysqld
 
+WORKDIR /var/run/mysqld
+    
 COPY ./tools/script.sh /tmp/script.sh
 
 RUN chmod +x /tmp/script.sh
 
-RUN sed -i "s/127.0.0.1/0.0.0.0/" /etc/mysql/mariadb.conf.d/50-server.cnf
+EXPOSE 3306
+
+USER mysql
 
 ENTRYPOINT ["bash", "/tmp/script.sh"]
-
-CMD ["mysqld_safe"]
