nginx and mariadb connected

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,16 +1,17 @@
 DOMAIN_NAME=andre-da.42.fr
 
 # MariaDB Setup
-SQL_DB=mydata
+SQL_DB=inceptiondb
 SQL_USER=andre
-SQL_PASS=1234
-SQL_ROOT_PASS=1234
+SQL_PASS=4242
+SQL_ROOT_PASS=4242root
 
 # WordPress Admin
-WP_TITLE=myFirstSite
-WP_ADMIN_USR=42master
-WP_ADMIN_PWD=1234
+WP_TITLE=Inception
+WP_URL=http://andre-da.42.fr
+WP_ADMIN_USER=42master
+WP_ADMIN_PASS=42andre42
 WP_ADMIN_EMAIL=admin@andre.42.fr
-WP_USR=andre-da
-WP_EMAIL=fxandrealb@gmail.com
-WP_PWD=1234
+WP_USER=andre-da
+WP_USER_EMAIL=fxandrealb@gmail.com
+WP_USER_PASS=1234
