--- a/srcs/.env
+++ b/srcs/.env
@@ -1,4 +1,7 @@
+# Domain and SSL details
 DOMAIN_NAME=andre-da.42.fr
+SSL_CERT_PATH=/etc/ssl/certs/andre-da.crt
+SSL_KEY_PATH=/etc/ssl/private/andre-da.key
 
 # MariaDB Setup
 SQL_DB=inceptiondb
@@ -8,7 +11,7 @@ SQL_ROOT_PASS=4242root
 
 # WordPress Admin
 WP_TITLE=Inception
-WP_URL=http://andre-da.42.fr
+WP_URL=https://andre-da.42.fr
 WP_ADMIN_USER=42master
 WP_ADMIN_PASS=42andre42
 WP_ADMIN_EMAIL=admin@andre.42.fr
