--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -16,6 +16,8 @@ RUN mkdir -p /run/php
 
 COPY tools/script.sh /etc/wordpress.sh
 
+RUN chmod +x /etc/wordpress.sh
+
 EXPOSE 9000
 
 ENTRYPOINT [ "bash", "/etc/wordpress.sh" ]
